fix(MessageServiceImpl): collecting to modifable list